force-app/main/default/objects/GL_Code__c/GL_Code__c.object-meta.xml
<CustomObject>
    <label>GL Account</label>
    <nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>