force-app/main/default/objects/GL_Code__c/fields/IsProceed__c.field-meta.xml
<CustomField>
    <fullName>IsProceed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProceed</label>
    <type>Checkbox</type>
</CustomField>