force-app/main/default/objects/GL_Code__c/fields/P_L_Category_Sequence__c.field-meta.xml
<CustomField>
    <fullName>P_L_Category_Sequence__c</fullName>
    <formula>PL_Category__r.Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;L Category Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>