force-app/main/default/objects/GL_Code__c/fields/PL_Category__c.field-meta.xml
<CustomField>
    <fullName>PL_Category__c</fullName>
    <description>PL_Category__c</description>
    <label>P&amp;L Category</label>
    <referenceTo>P_L_Category__c</referenceTo>
    <relationshipLabel>GL Accounts</relationshipLabel>
    <relationshipName>PL_Category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>